challenge completed! :tada:

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve",
-    "server": "json-server server.json --port 3333",
+    "dev": "webpack serve  --open --mode development",
+    "server": "json-server server.json --port 3333 -w",
     "build": "cross-env NODE_ENV=production webpack",
     "test": "jest --watchAll"
   },
